[gd_scene load_steps=2 format=2]

[ext_resource path="res://MapRegion.gd" type="Script" id=1]

[node name="MapRegion" type="Area2D"]
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
[connection signal="input_event" from="." to="." method="_on_MapRegion_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_MapRegion_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_MapRegion_mouse_exited"]
